# qemu

./: .travis.yml  MAINTAINERS  Makefile  Makefile.objs  Makefile.target  arch_init.c  block.c  blockdev.c  blockjob.c  configure  coroutine-gcoroutine.c  cpus.c  dump.c  exec.c  gdbstub.c  hmp-commands-info.hx  hmp-commands.hx  hmp.c  hmp.h  kvm-all.c  memory.c  monitor.c  numa.c  os-posix.c  qapi-schema.json  qdev-monitor.c  qemu-char.c  qemu-options.hx  qmp-commands.hx  qmp.c  rules.mak  tpm.c  vl.c
backends/: Makefile.objs  cryptodev-vhost.c  cryptodev.c  hostmem-memfd.c  hostmem-ram.c  vhost-user.c
block/: blkdebug.c  file-posix.c  io.c  iscsi.c  nbd-client.c  nbd.c  nfs.c  null.c  qcow2-cache.c  qcow2-cluster.c  quorum.c  rbd.c  sheepdog.c  ssh.c  vvfat.c
chardev/: char-socket.c  char.c
contrib/ivshmem-client/: ivshmem-client.c
contrib/ivshmem-server/: ivshmem-server.c  ivshmem-server.h  main.c
contrib/libvfio-user/: Makefile.objs  libvfio-user-glib.c  libvfio-user-glib.h  libvfio-user.c  libvfio-user.h  vfio-user-serial.c
crypto/: tlssession.c
default-configs/: pci.mak  s390x-softmmu.mak
docs/specs/: tpm.txt  (+1 more)
hw/: Makefile.objs
include/: vfio-user.h
io/: dns-resolver.c
libcacard/: Makefile  cac.c  cac.h  card_7816.c  card_7816.h  vcard.c  vcard.h  vcard_emul_type.c  vscclient.c
linux-user/: syscall.c
migration/: Makefile.objs  channel.c  colo.c  savevm.c
nbd/: server.c
net/: Makefile.objs  colo-compare.c  hub.c  net.c  slirp.c
qapi/: block-core.json  char.json  introspect.json  migration.json  misc.json  qapi-clone-visitor.c  qmp-dispatch.c  qobject-input-visitor.c  rocker.json  tpm.json  ui.json
qga/: commands-posix.c  commands.c  main.c
qobject/: json-lexer.c  json-parser.c  qdict.c  qjson.c  qnum.c  quint.c
qom/: cpu.c  object.c  object_interfaces.c
scripts/: qapi-visit.py  qapi.py  update-linux-headers.sh
slirp/: Makefile.objs  ip_icmp.c  ip_input.c  libslirp-version.h.in  libslirp.h  meson.build  misc.c  qtailq.h  slirp.c  slirp.h  socket.c  state.c  stream.c  tcp_input.c  tcp_output.c  tcp_subr.c  tcp_timer.c  udp.c  util.c  util.h  version.c  vmstate.c  vmstate.h
src/: qemu.rs
stubs/: Makefile.objs  xen-hvm.c
target-i386/: cpu.c
tests/: .gitignore  Makefile  Makefile.include  ahci-test.c  boot-order-test.c  check-qdict.c  check-qjson.c  check-qlist.c  check-qnum.c  fw_cfg-test.c  ivshmem-test.c  libqtest.c  libqtest.h  qmp-test.c  qom-test.c  sdhci-test.c  test-keyval.c  test-qga.c  test-qmp-cmds.c  test-qmp-commands.c  test-qmp-event.c  test-qobject-input-visitor.c  test-qobject-output-visitor.c  test-x86-cpuid-compat.c  vhost-user-bridge.c  vhost-user-test.c
trace/: Makefile.objs
ui/: console.c  spice-core.c  spice-display.c  vnc-enc-tight.c  vnc.c
util/: Makefile.objs  main-loop.c  memfd.c  osdep.c  oslib-posix.c  oslib-win32.c  qemu-coroutine-lock.c  qemu-option.c  qemu-sockets.c
(+170 files in other folders)
